issue crud mvp, issue index for frontend
